# tokamunch-pyuda-datasource

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: upload-pypi.yml
src/tokamunch_pyuda_datasource/: __init__.py  plugin.py  pyuda_data_source.py
tests/: test_plugin.py
